--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -20,6 +20,7 @@
       notification.close();
     },5000);
 	} else {
-	  Notification.requestPermission();
+    alert("You don't have permission")
+	  // Notification.requestPermission();
 	}
 </script>
