--- a/app/views/notification_demo/index.html.erb
+++ b/app/views/notification_demo/index.html.erb
@@ -14,6 +14,6 @@
       notification.close();
     },5000);
 	} else {
-	  Notification.requestPermission();
+	  alert("You don't have permision")
 	}
 </script>
