--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -20,7 +20,6 @@
       notification.close();
     },5000);
 	} else {
-    alert("You don't have permission")
-	  // Notification.requestPermission();
+	  Notification.requestPermission();
 	}
 </script>
